[fix]#7199 align default mood ico

--- a/assets/themes/leo/css/icons.less
+++ b/assets/themes/leo/css/icons.less
@@ -1336,8 +1336,8 @@ i.img:before{
 /* default */
 i.default{
   .fonticon;
-  font-size: 55px;
-  line-height: 50px;
+  font-size: 45px;
+  line-height: 45px;
 }
 i.default:before{
   content: '\e870';
